k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blockworks
  labels:
    app: blockworks
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blockworks
  template:
    metadata:
      labels:
        app: blockworks
    spec:
      imagePullSecrets:
        - name: ghcr-pull-secret
      containers:
        - name: blockworks
          image: ghcr.io/janne6565/blockworks:master-e43aa02
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 200m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 20
