k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blockworks
  labels:
    app: blockworks
spec:
  selector:
    app: blockworks
  ports:
    - name: http
      port: 80
      targetPort: 80
