k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blockworks-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: blockworks.jannekeipert.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blockworks
                port:
                  number: 80
  tls:
    - hosts:
        - blockworks.jannekeipert.de
      secretName: blockworks-tls
